--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "build": "react-app-rewired build && yarn analyze",
     "test": "react-app-rewired test",
     "start:pure": "react-app-rewired start",
-    "mock:json": "npx nodemon ./mocks/json.js",
-    "mock:mock": "npx nodemon ./mocks/mock.js",
+    "mock:rest": "npx nodemon ./mocks/rest/index.js",
+    "mock:server": "npx nodemon ./mocks/server/index.js",
     "analyze": "npx source-map-explorer 'build/static/js/*.js'",
     "serve": "npx serve -s build",
     "static": "npx nodemon ./static/index.js",
-    "start": "npx concurrently 'cross-env NODE_ENV=development yarn mock:json' 'cross-env NODE_ENV=development yarn mock:server' 'react-app-rewired start'",
+    "start": "npx concurrently 'cross-env NODE_ENV=development yarn mock:rest' 'cross-env NODE_ENV=development yarn mock:server' 'react-app-rewired start'",
     "lint:css": "stylelint './src/**/*{.tsx,.ts}'"
   },
   "sideEffects": false,
@@ -131,6 +131,7 @@
     "husky": "^4.2.3",
     "jest-enzyme": "^7.1.2",
     "json-server": "^0.15.0",
+    "koa": "^2.11.0",
     "lint-staged": "^10.0.8",
     "nodemon": "^1.19.4",
     "prettier": "^1.19.1",
