chore: graphql server

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #/src/proto
 # dependencies
 /node_modules
+node_modules
 /.pnp
 .pnp.js
 # env
@@ -14,6 +15,7 @@
 
 # production
 /build
+build
 /dist
 build.zip
 
